[gd_scene load_steps=5 format=3 uid="uid://dnh8n4togvacq"]

[ext_resource type="Script" path="res://UI/Main Screen/Main Menu/main_menu.gd" id="1_rdr1o"]
[ext_resource type="Texture2D" uid="uid://cojmnbc5epnw3" path="res://Assets/Pictures/Game Button Outline.png" id="1_wj78x"]
[ext_resource type="Texture2D" uid="uid://xkkkxtbxmyn2" path="res://Assets/Pictures/Game Button Outline Shadowed 2.png" id="2_lt50f"]
[ext_resource type="Texture2D" uid="uid://qgmo60ekmbpm" path="res://Assets/Pictures/Game Button Outline Shadowed 1.png" id="2_q4us6"]

[node name="Main Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rdr1o")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="Button vbox" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 44

[node name="New Game Button" type="TextureButton" parent="MarginContainer/Button vbox"]
layout_mode = 2
texture_normal = ExtResource("1_wj78x")
texture_pressed = ExtResource("2_lt50f")
texture_hover = ExtResource("2_q4us6")

[node name="New Game Label" type="Label" parent="MarginContainer/Button vbox/New Game Button"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.293
anchor_top = 0.121
anchor_right = 0.723
anchor_bottom = 0.647
offset_left = -0.151016
offset_top = -0.0360012
offset_right = -0.161041
offset_bottom = -0.052002
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 54
text = "New Game"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Load Game Button" type="TextureButton" parent="MarginContainer/Button vbox"]
layout_mode = 2
texture_normal = ExtResource("1_wj78x")
texture_pressed = ExtResource("2_lt50f")
texture_hover = ExtResource("2_q4us6")

[node name="Load Game Label" type="Label" parent="MarginContainer/Button vbox/Load Game Button"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.293
anchor_top = 0.121
anchor_right = 0.723
anchor_bottom = 0.647
offset_left = -3.65102
offset_top = -8.036
offset_right = -3.66104
offset_bottom = 4.948
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 54
text = "Load Game"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Options" type="TextureButton" parent="MarginContainer/Button vbox"]
layout_mode = 2
texture_normal = ExtResource("1_wj78x")
texture_pressed = ExtResource("2_lt50f")
texture_hover = ExtResource("2_q4us6")

[node name="Option Label" type="Label" parent="MarginContainer/Button vbox/Options"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.293
anchor_top = 0.121
anchor_right = 0.723
anchor_bottom = 0.647
offset_left = -3.65102
offset_top = -8.036
offset_right = -3.66104
offset_bottom = 4.948
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 54
text = "Option"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Version Label" type="Label" parent="MarginContainer/Button vbox"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 16
text = "v0.3.6"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="MarginContainer/Button vbox/New Game Button" to="." method="handle_new_game_button_clicked"]
[connection signal="pressed" from="MarginContainer/Button vbox/Load Game Button" to="." method="handle_load_game_button_clicked"]
[connection signal="pressed" from="MarginContainer/Button vbox/Options" to="." method="handle_option_button_clicked"]
